# brydz

./: Cargo.toml  changelog.md
brydz_core/: Cargo.toml  LICENSE  README.md
brydz_core/src/: lib.rs  main.rs  meta.rs
brydz_core/src/amfi/: agent.rs  env.rs  policy.rs  spec.rs
brydz_core/src/amfi/comm/: mod.rs
brydz_core/src/amfi/state/: action.rs  state_update.rs
brydz_core/src/amfi/state/agent/: dummy.rs  mod.rs  state_id.rs  traits.rs
brydz_core/src/amfi/state/agent/all_knowing/: state.rs  state_tensor.rs
brydz_core/src/amfi/state/agent/assuming/: state.rs  state_history_tensor.rs  state_tensor.rs
brydz_core/src/amfi/state/agent/fuzzy_card_set/: card_probability.rs  mod.rs  parse.rs  serde.rs
brydz_core/src/amfi/state/agent/simple/: mod.rs  state_history_tensor.rs  state_tensor.rs
brydz_core/src/amfi/state/agent/tensor_convert/: converter420.rs  converter_sparse.rs  mod.rs
brydz_core/src/amfi/state/env/: complete.rs  minimal.rs  mod.rs
brydz_core/src/amfi/state/neuro/: action_convert.rs  as_state_history_tensor.rs
brydz_core/src/amfi/test/: mod.rs
brydz_core/src/amfi/world/: mod.rs
brydz_core/src/amfiteatr/: agent.rs  env.rs  mod.rs  policy.rs  side_id.rs  spec.rs
brydz_core/src/amfiteatr/comm/: mod.rs
brydz_core/src/amfiteatr/state/: action.rs  contract_state.rs  mod.rs  state_update.rs
brydz_core/src/amfiteatr/state/agent/: dummy.rs  hand_info.rs  info_set.rs  mod.rs  traits.rs
brydz_core/src/amfiteatr/state/agent/all_knowing/: mod.rs  state.rs  state_tensor.rs
brydz_core/src/amfiteatr/state/agent/assuming/: mod.rs  state.rs  state_tensor.rs
brydz_core/src/amfiteatr/state/agent/fuzzy_card_set/: mod.rs  parse.rs  serde.rs
brydz_core/src/amfiteatr/state/agent/simple/: mod.rs  state_history_tensor.rs  state_tensor.rs
brydz_core/src/amfiteatr/state/agent/tensor_convert/: converter420.rs  converter_dense1.rs  converter_sparse.rs  converter_sparse_historic.rs  mod.rs  state_with_hist_conv.rs
brydz_core/src/amfiteatr/state/env/: complete.rs  minimal.rs
brydz_core/src/amfiteatr/state/neuro/: action_convert.rs  mod.rs
brydz_core/src/amfiteatr/test/: mod.rs
brydz_core/src/amfiteatr/world/: contract.rs
brydz_core/src/bidding/: auction_field.rs  bid.rs  call.rs  declaration_storage.rs  history.rs  mod.rs  parser.rs
brydz_core/src/cards/: deck.rs  mod.rs  trump.rs
brydz_core/src/contract/: maintainer.rs  mod.rs  randomizer.rs  registering_contract.rs  spec.rs  suit_exhaust.rs  trick.rs  trick_solver.rs
brydz_core/src/deal/: biased_hand_distribution.rs  contract_game_description.rs  deal_distribution.rs  deck_distr_description.rs  hand_distribution.rs  mod.rs
brydz_core/src/error/: bidding.rs  bridge.rs  contract.rs  correctness.rs  distribution.rs  format.rs  fuzzy_card_set.rs  hand.rs  mod.rs  score.rs  trick.rs
brydz_core/src/player/: axis.rs  mod.rs  player_instance.rs  role.rs  side.rs  side_map.rs  side_map_smap.rs
brydz_core/src/score/: calculation.rs  mod.rs  rewards.rs  rubber_score.rs  score_table_legacy.rs  sport.rs
brydz_core/src/score/tables/: contracted.rs  mod.rs  overtricks.rs  penalties.rs  premium.rs  slam.rs
brydz_dd/: Cargo.toml  README.md
brydz_dd/benches/: alphabeta_explorer.rs  binary_explorer.rs  init_hash_array.rs
brydz_dd/src/: lib.rs  main.rs
brydz_dd/src/actions/: card_pack.rs  mod.rs
brydz_dd/src/actions/group/: distinct.rs  mod.rs  neigbour.rs
brydz_dd/src/error/: double_dummy.rs  group.rs  hash.rs  mod.rs  optimiser.rs
brydz_dd/src/explore/: alpha_beta_explorer.rs  binary_explorer.rs  explore_output.rs  game_state.rs  mod.rs
brydz_dd/src/explore/track/: full_track.rs  mod.rs  track_step.rs
brydz_dd/src/hash/: hash24.rs  hash_entry.rs  hash_table.rs  label.rs  mod.rs
brydz_dd/src/hash/hash_store/: dummy_store.rs  hash_array_store.rs  mod.rs
brydz_dd/src/hash/hasher/: hash_28_a.rs  mod.rs
brydz_dd/src/hash/hasher/hash24/: hasher.rs  mod.rs
brydz_dd/src/hash/ranker/: mod.rs  more_cards_ranker.rs
brydz_dd/src/node/: mod.rs  trick_node.rs
brydz_model/: Cargo.toml  README.md
brydz_model/src/: domain.rs  lib.rs  main.rs  settings.rs
brydz_model/src/data_formats/: distribution_template.rs  mod.rs  sim_contract_params.rs
brydz_model/src/error/: gen.rs  mod.rs  simulation.rs
brydz_model/src/generate/: contract.rs  mod.rs
brydz_model/src/model/: agent.rs  detached.rs  mod.rs  model.rs  policy.rs
brydz_model/src/old/data_formats/: mod.rs
brydz_model/src/old/model/: contract.rs
brydz_model/src/old/options/: mod.rs
brydz_model/src/old/options/operation/: mod.rs
brydz_model/src/old/options/operation/demo_op/: biased_sample.rs  tcp.rs
brydz_model/src/old/options/operation/gen_contract/: subtrump.rs
brydz_model/src/old/options/operation/generate/contract/: mod.rs
brydz_model/src/old/options/operation/train/: mod.rs  options.rs
brydz_model/src/old/options/operation/train/sessions/: ac_generic.rs  main_session.rs  (+4 more)
brydz_model/src/old/policy/: mod.rs
brydz_model/src/old/policy/nn/: contract_net.rs  mod.rs  qnet_synthetic.rs
brydz_model/src/options/: bias_generation.rs  contract.rs  contract_generation.rs  hand_info.rs  log_level_filter.rs  mod.rs  policy_choice.rs
brydz_model/src/options/operation/: mod.rs
brydz_model/src/options/operation/demo_op/: biased_params.rs  biased_sample.rs  generic.rs  local.rs  mod.rs  tcp.rs
brydz_model/src/options/operation/gen_contract/: choice_doubling.rs  deal.rs  force_declarer.rs  mod.rs
brydz_model/src/options/operation/generate/: mod.rs
brydz_model/src/options/operation/generate/bias/: mod.rs  options.rs
brydz_model/src/options/operation/generate/contract/: mod.rs  options.rs
brydz_model/src/options/operation/simulate_local/: mod.rs  options.rs
brydz_model/src/options/operation/train/: options.rs  sequential.rs  train_session.rs  train_session_state_hist.rs
brydz_model/src/options/operation/train/sessions/: ac_generic.rs  main_session.rs  mod.rs  options.rs  q_generic.rs  team.rs  traits.rs
brydz_model/src/policy/nn/: explore_exploit_policy.rs  mod.rs  qnet_state_hist.rs  qnet_synthetic.rs
(+8 files in other folders)
