[workspace]
resolver = "2"
members = [
    "brydz_dd",
    "brydz_model",
    "brydz_core"
]

[patch.crates-io]
brydz_core = {path = "brydz_core"}
brydz_model = {path = "brydz_model"}
brydz_dd = {path = "brydz_dd"}
amfiteatr_core = {path = "../amfiteatr/amfiteatr_core"}
amfiteatr_rl = {path = "../amfiteatr/amfiteatr_rl"}
amfiteatr_net_ext = {path = "../amfiteatr/amfiteatr_net_ext"}
amfiteatr_proc_macro = {path = "../amfiteatr/amfiteatr_proc_macro"}
karty = {path = "../karty/karty"}
karty_proc_macro = {path = "../karty/karty_proc_macro"}
