[package]
name = "brydz_core"
version = "0.3.0"
edition = "2021"
repository = "https://github.com/moroviintaas/brydz_core"
license-file = "LICENSE"
keywords = ["game", "theory", "cards", "bridge"]
categories = ["games"]
description =  "Implemented basic rules of contract bridge game"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = {version = "1.0.197", features = ["derive"], optional = true}
serde_json = {version = "1.0.114"}
rand = "0.8.5"
itertools = "0.12.1"
arrayvec = {version = "0.7.4", features = ["serde"]}
ron = {version = "0.8.1" , optional = true}
nom = "7.1.3"

log = {version = "0.4.21", optional = true}
parking_lot = {version = "0.12.1", optional = true}
speedy = {version = "0.8.7", optional =true}
tokio = {version = "1.36.0", features = ["net", "rt", "rt-multi-thread", "io-util", "sync"], optional = true}
postcard = {version = "1.0.8", optional = true}

smallvec = {version = "1.13.1", optional = true}
num-rational = {version = "0.4.1", optional = true}
serde-big-array = "0.5.1"
approx = "0.5.1"
thiserror = "1.0.58"
statrs = {version = "0.16.0"}

amfiteatr_core = {version = "0.3.0", features = ["serde"] , optional = true}
amfiteatr_rl = {version = "0.3.0", optional = true}
karty = {version = "0.1.1", features = ["register", "parse", "speedy", "serde", "random", "parse"]}


[features]

speedy = ["dep:speedy"]
serde = ["dep:serde", "parse"]
serde_derive = ["dep:serde", "serde", "dep:ron"]
serde_dedicate = ["dep:serde", "serde", "dep:ron"]
serde_ron = ["dep:serde", "serde", "dep:ron"]
amfiteatr = ["dep:amfiteatr_core", "dep:smallvec", "dep:log", "dep:num-rational"]
torch = ["dep:amfiteatr_rl", "amfiteatr"]
parse = []



