[package]
name = "brydz_core"
version = "0.7.0"
edition = "2021"
repository = "https://github.com/moroviintaas/brydz_core"
license-file = "LICENSE"
keywords = ["game", "theory", "cards", "bridge"]
categories = ["games"]
description =  "Implemented basic rules of contract bridge game"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = {version = "1.0.197", features = ["derive"], optional = true}
serde_json = {version = "1.0.115"}
rand = "0.8.5"
itertools = "0.14.0"
arrayvec = {version = "0.7.4", features = ["serde"]}
ron = {version = "0.8.1" , optional = true}
nom = "8.0.0"

log = {version = "0.4.21", optional = true}
parking_lot = {version = "0.12.1", optional = true}
speedy = {version = "0.8.7", optional =true}
tokio = {version = "1.37.0", features = ["net", "rt", "rt-multi-thread", "io-util", "sync"], optional = true}
postcard = {version = "1.0.8", optional = true}

smallvec = {version = "1.13.1", optional = true}
num-rational = {version = "0.4.1", optional = true}
serde-big-array = "0.5.1"
approx = "0.5.1"
thiserror = "2.0.11"
statrs = {version = "0.16.1"}

amfiteatr_core = {version = "0.7.0", features = ["serde"] , optional = true}
amfiteatr_rl = {version = "0.7.0", optional = true}
karty = {version = "0.2.1", features = ["register", "parse", "speedy", "serde", "random", "parse"]}
enum-map = "2.7.3"


[features]

speedy = ["dep:speedy"]
serde = ["dep:serde", "parse"]
serde_derive = ["dep:serde", "serde", "dep:ron"]
serde_dedicate = ["dep:serde", "serde", "dep:ron"]
serde_ron = ["dep:serde", "serde", "dep:ron"]
amfiteatr = ["dep:amfiteatr_core", "dep:smallvec", "dep:log", "dep:num-rational"]
torch = ["dep:amfiteatr_rl", "amfiteatr"]
parse = []



